# tableland-functions

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
examples/data/: generate.sh
examples/demo/: Cargo.toml
examples/demo/src/: contract.rs  lib.rs
examples/demo/tests/: integration.rs
examples/html/: Cargo.toml
examples/html/src/: lib.rs
examples/html/testdata/: response.json
examples/html/tests/: integration.rs
examples/json/: Cargo.toml
examples/json/.cargo/: config
examples/json/src/: lib.rs
examples/json/tests/: integration.rs
examples/json_api/: Cargo.toml
examples/json_api/.cargo/: config
examples/json_api/src/: lib.rs  router.rs
examples/ssr/: Cargo.toml
examples/ssr/src/: lib.rs  tracing_subscriber.rs  utils.rs
examples/svg/: Cargo.toml
examples/svg/src/: lib.rs
examples/svg/testdata/: response.json  response1.json  response2.json
examples/svg/tests/: integration.rs
lib/client/: Cargo.toml
lib/client/src/: chains.rs  client.rs  errors.rs  lib.rs  testing.rs
lib/client/src/testing/: mock.rs
lib/client/types/: Cargo.toml
lib/client/types/src/: lib.rs
lib/derive/: Cargo.toml
lib/derive/src/: lib.rs
lib/router/: Cargo.toml
lib/router/src/: lib.rs  router.rs
lib/std/: Cargo.toml
lib/std/src/: binary.rs  ctx.rs  deps.rs  errors.rs  exports.rs  hex_binary.rs  http.rs  imports.rs  lib.rs  memory.rs  mock.rs  results.rs  tableland.rs  testing.rs  traits.rs  types.rs
lib/std/src/errors/: mod.rs  std_error.rs  system_error.rs
lib/std/src/http/: error.rs  request.rs  response.rs  router.rs  serde.rs
lib/std/src/math/: decimal.rs  decimal256.rs  uint128.rs  uint256.rs  uint512.rs  uint64.rs
lib/std/src/results/: contract_result.rs  cosmos_msg.rs  empty.rs  events.rs  func_result.rs  mod.rs  response.rs  submessages.rs  system_result.rs
lib/std/src/testing/: mock.rs
lib/std/testdata/: response.json
lib/vm/: Cargo.toml
lib/vm/src/: backend.rs  calls.rs  checksum.rs  compatibility.rs  conversion.rs  environment.rs  imports.rs  instance.rs  lib.rs  limited.rs  memory.rs  modules.rs  static_analysis.rs  testing.rs  wasm_backend.rs
lib/vm/src/errors/: communication_error.rs  region_validation_error.rs  vm_error.rs
lib/vm/src/modules/: versioning.rs
lib/vm/src/testing/: calls.rs  instance.rs  mock.rs
lib/vm/src/wasm_backend/: compile.rs  gatekeeper.rs  limiting_tunables.rs  store.rs
lib/vm/testdata/: json.wasm  response.json
lib/worker/: Cargo.toml
lib/worker/src/: backend.rs  config.rs  errors.rs  handlers.rs  instance.rs  main.rs  store.rs  test.rs  worker.rs
lib/worker/src/errors/: store.rs  worker.rs
lib/worker/testdata/: html.wasm  json.wasm  svg.wasm
tableland_client/: Cargo.toml
tableland_client/client_types/: Cargo.toml
tableland_client/src/: lib.rs
tableland_worker_protocol/: Cargo.toml
tableland_worker_protocol/bindings/rust-plugin/: Cargo.toml
tableland_worker_protocol/bindings/rust-plugin/src/: export.rs  import.rs  types.rs
tableland_worker_protocol/bindings/rust-wasmer-runtime/: bindings.rs  types.rs
tableland_worker_protocol/bindings/rust-wasmer-wasi-runtime/: bindings.rs  types.rs
tableland_worker_protocol/generator/: Cargo.toml
tableland_worker_protocol/generator/src/: main.rs
tableland_worker_protocol/src/: error.rs  headers.rs  http.rs  lib.rs  main.rs  method.rs  request.rs  response.rs
tableland_worker_protocol/src/types/: error.rs  headers.rs  http.rs  request.rs  response.rs
tableland_worker_runtime/: Cargo.toml
tableland_worker_runtime/src/: config.rs  handlers.rs  main.rs  spec.rs  test.rs  wasi_spec.rs  worker.rs
tableland_worker_runtime/src/spec/: bindings.rs  types.rs
tableland_worker_runtime/src/wasi_spec/: bindings.rs  types.rs
tableland_worker_utils/: Cargo.toml
tableland_worker_utils/src/: lib.rs  router.rs
