[workspace]
exclude = [
    "examples/demo",
]
members = [
    "lib/client",
    "lib/client/types",
    "lib/derive",
    "lib/std",
    "lib/vm",
    "lib/worker",
]

[workspace.package]
authors = ["Textile <contact@textile.io"]
description = "A Rust SDK and runtime for Tableland Workers."
edition = "2021"
homepage = "https://github.com/sanderpick/tableland-worker/"
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/sanderpick/tableland-worker/"
version = "0.1.0"
