[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
name = "tableland_client"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
