[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
name = "tableland_worker_protocol"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
fp-bindgen = {git = "https://github.com/fiberplane/fp-bindgen", default-features = false, features = [
    "http-compat",
    "serde-bytes-compat"
]}
fp-bindgen-support = {git = "https://github.com/fiberplane/fp-bindgen", features = [
    "http"
]}
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
thiserror = "1.0"
