[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
name = "tableland_worker_runtime"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = "1.0"
bytes = "1.0"
fp-bindgen-support = { git = "https://github.com/sanderpick/fp-bindgen", features = [
  "async",
  "host"
]}
futures = { version = "0.3", default-features = false }
hex = "0.4.3"
http = "0.2"
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sha2 = "0.10"
stretto = { version = "0.7", features = ["async"] }
tableland_client = { path = "../tableland_client" }
tableland_worker_protocol = { path = "../tableland_worker_protocol" }
thiserror = "1.0"
tokio = { version = "1.9.0", features = ["full"] }
warp = "0.3"
wasmer = { version = "2.3", features = ["compiler", "cranelift", "singlepass"] }
wasmer-wasi = "2.3"

[features]
wasi = []
