[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
name = "tableland_worker_runtime"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = "1.0"
bytes = "1.0"
client_types = { path = "../tableland_client/client_types" }
fp-bindgen-support = { git = "https://github.com/fiberplane/fp-bindgen", features = [
  "async",
  "host"
]}
futures = { version = "0.3", default-features = false }
http = "0.2"
once_cell = "1"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
stretto = { version = "0.7", features = ["async"] }
tableland_client = { path = "../tableland_client" }
tableland_worker_protocol = { path = "../tableland_worker_protocol" }
thiserror = "1.0"
tokio = { version = "1.9.0", features = ["full"] }
warp = "0.3"
wasmer = { version = "2.3", features = ["compiler", "cranelift", "singlepass"] }
wasmer-wasi = "2.3"

[features]
wasi = []
