[package]
authors = ["Textile <contact@textile.io>"]
edition = "2021"
name = "json"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 's'
overflow-checks = true
panic = 'abort'
rpath = false
strip = true

[features]
backtraces = ["tableland_std/backtraces", "tableland_vm/backtraces"]
default = []

[dependencies]
tableland_client_types = { path = "../../lib/client/types" }
tableland_std = { path = "../../lib/std" }

[dev-dependencies]
serde_json = "1.0.93"
tableland_vm = { path = "../../lib/vm" }
