[package]
authors = ["Textile <contact@textile.io>"]
edition = "2021"
name = "json_api"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bindings = {path = "../../tableland_worker_protocol/bindings/rust-plugin"}
futures = "0.3.21"
http = "0.2"
matchit = "0.4.2"
once_cell = {version = "1"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_bytes = {version = "0.11"}

[profile.release]
lto = true
opt-level = 's'
