[package]
authors = ["Textile <contact@textile.io>"]
edition = "2021"
name = "json_api"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bindings = {path = "../../tableland_worker_protocol/bindings/rust-plugin"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tableland_worker_utils = {path = "../../tableland_worker_utils"}

[profile.release]
lto = true
opt-level = 's'
