[package]
authors = ["Textile <contact@textile.io>"]
edition = "2021"
name = "ssr"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
#bytes = "1"
bindings = {path = "../../tableland_worker_protocol/bindings/rust-plugin"}
#http = {version = "0.2"}
once_cell = {version = "1"}
serde_bytes = {version = "0.11"}
#serde_json = "1"
#tracing = "0.1.37"
maud = "0.24"

[profile.release]
lto = true
opt-level = 's'
