[package]
authors = ["Textile <contact@textile.io>"]
edition = "2021"
name = "ssr"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bindings = {path = "../../tableland_worker_protocol/bindings/rust-plugin"}
once_cell = {version = "1"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_bytes = {version = "0.11"}
maud = "0.24"

[profile.release]
lto = true
opt-level = 's'
