[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
name = "tableland_client"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[features]
default = []
blocking = ["reqwest/blocking"]

[dependencies]
async-trait = "0.1.65"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tableland_client_types = { path = "./types" }
