[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
name = "tableland_router"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
futures = "0.3.21"
http = "0.2"
matchit = "0.4.2"
