[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
name = "tableland_std"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[features]
default = ["abort"]
abort = []
# backtraces provides much better context at runtime errors (in non-wasm code)
# at the cost of a bit of code size and performance.
# This feature requires Rust nightly because it depends on the unstable backtrace feature.
backtraces = []

[dependencies]
http = "0.2.9"
matchit = "0.4.2"
serde = { version = "1.0.103", default-features = false, features = ["derive", "alloc"] }
serde_bytes = "0.11.9"
serde_json = "1.0.93"
tableland_client_types = { path = "../client/types" }
tableland_derive = { path = "../derive" }
thiserror = "1.0.38"
