[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
name = "tableland_vm"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[features]
default = []
# backtraces provides much better context at runtime errors (in non-wasm code)
# at the cost of a bit of code size and performance.
# This feature requires Rust nightly because it depends on the unstable backtrace feature.
backtraces = []

[dependencies]
http = "0.2.9"
loupe = "0.1.3"
parity-wasm = "0.45.0"
serde = { version = "1.0.152", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0.93"
sha2 = "0.10.3"
tableland_std = { path = "../std" }
thiserror = "1.0.38"
wasmer = { version = "=2.3.0", default-features = false, features = [
    "cranelift",
    "singlepass",
    "universal",
]}
wasmer-middlewares = "=2.3.0"

[dev-dependencies]
wat = "1.0.59"
