[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
name = "tableland_vm"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[features]
backtraces = []
default = []

[dependencies]
http = "0.2.9"
loupe = "0.1.3"
parity-wasm = "0.45.0"
serde = { version = "1.0.152", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0.93"
sha2 = "0.10.3"
tableland_client_types = { path = "../client/types" }
tableland_std = { path = "../std" }
thiserror = "1.0.38"
wasmer = { version = "=2.3.0", default-features = false, features = [
    "cranelift",
    "singlepass",
    "universal",
] }
wasmer-middlewares = "=2.3.0"

[dev-dependencies]
hex = "0.4.3"
wat = "1.0.59"
