[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
name = "tableland_worker"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = "1.0"
bytes = "1.4.0"
confy = "0.5.1"
reqwest = "0.11"
serde = { version = "1.0.152", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0.93"
stretto = { version = "0.7", features = ["async"] }
tableland_client = { path = "../client", features=["blocking"] }
tableland_client_types = { path = "../client/types" }
tableland_std = { path = "../std" }
tableland_vm = { path = "../vm" }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
warp = "0.3"
