[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
name = "client_types"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
fp-bindgen = {git = "https://github.com/fiberplane/fp-bindgen", default-features = false}
serde = { version = "1.0", features = ["derive"] }
