[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
name = "generator"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
fp-bindgen = {git = "https://github.com/sanderpick/fp-bindgen", branch = "sander/cargo-dep-git-helpers", features = [
  "bytes-compat",
  "http-compat",
  "serde-bytes-compat",
  "time-compat",
  "generators",
]}
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
tableland_worker_protocol = {path = "../"}
thiserror = "1.0"
