[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
name = "tableland_client_types"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
