[package]
name = "bindings"
version = "0.1.0"
authors = ["Textile <contact@textile.io>"]
edition = "2018"

[dependencies]
fp-bindgen-support = { git = "https://github.com/fiberplane/fp-bindgen", version = "3.0.0-alpha.1", features = ["async", "guest", "http"] }
http = { version = "0.2" }
once_cell = { version = "1" }
rmp-serde = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = { version = "0.11" }
serde_json = { version = "1.0" }
tableland_client_types = { path = "../../../lib/client/types" }
tableland_worker_protocol = { path = "../../../tableland_worker_protocol" }
